# SoftwareDevelopment

code/CPP/: #algo (1).cpp#  #print.h#  #referenceTest.cpp#  #reverse_linked_list.cpp#  .#algo.cpp  AssemblyInfo.cs  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Common.h  Context.cpp  Context.h  Crst.cpp  Crst.h  Document.cc  HostCtrl.cpp  HostCtrl.h  MacroIssue.cpp  MacroIssue.cpp~  Makefile  Misc-Sample.cbp  Misc-Sample.depend  Misc-Sample.layout  ObjectInstantiationAndCopyConstructor.cpp  ObjectInstantiationAndCopyConstructor.cpp~  Program.cs  Project.ede  TAGS  TAGS~  a.out  algo (1).cpp  algo (1).cpp~  algo.cpp  bigfixing-leader-sorted.cpp  bigfixing-leader-sorted.cpp~  boost_array (1).cpp  boost_array.cpp  c++cli.cpp  cc.cc  cmake_install.cmake  (+71 more)
code/CPP/.metadata/: version.ini
code/CPP/AccessModifiers/: protected_destructor.cpp  protected_destructor.cpp~
code/CPP/STL/: Associative_Containers_MultiSet.cpp  Associative_Containers_MultiSet.cpp~  Return_Local_Vector_By_Ref.cpp  Return_Local_Vector_By_Ref.cpp~
code/CPP/assignment/: #assignment1.cpp#  assignment.cpp  assignment.cpp~  assignment1.cpp  test.cpp  test.cpp~  test_vim.cpp
code/CPP/async/: bind_and_async.cpp
code/CPP/binary/: #binarymessage.cpp#  binarybuffer.cpp  binarybuffer.cpp~  binarymessage.cpp  binarymessage.cpp~  buffer.cpp  convert-to-binary.cpp  convert-to-binary.cpp~
code/CPP/bind/: bind.cpp  bind.cpp~  bind1.cpp  bind2.cpp
code/CPP/const/: ConstReturnValues.cpp  const-correctness.cpp  const-correctness.cpp~  const1.cpp  const1.h  const2.cpp  constHeader.h  constHeader1.h  const_temp_objects.cpp
code/CPP/fp/: #fp.cpp#  .#fp.cpp  fp.cpp  fp.cpp~
code/CPP/functional-programming/: CMakeLists.txt  extension-methods.cpp~  functional-container-wrapper.cpp  higher-order-functions.cpp
code/CPP/functors/: Functiors (1).cpp~  Functiors.cpp  Functiors.cpp~  Functiors1.cpp  functor11.cpp  functor3.c  functor3.cpp  functortest.cpp
code/CPP/gmock-test/: turtle.cpp~
code/CPP/hackerrank/: sum-int.cpp  sum-int.cpp~
code/CPP/include/: BROWSE  test.h  test.h~
code/CPP/lambda/: customLambda.cpp  customLambda.cpp~  lambda.cpp
code/CPP/my_utils/: build.gradle  build.gradle~
code/CPP/problem-solving/: CMakeLists.txt  CMakeLists.txt~  main-gtest.cpp  problem-solving.cpp  search-equilibrium.cpp  search-equilibrium.cpp~
code/CPP/rvalue/: .move_constructor.cpp.swp  move_constructor.cpp  move_constructor.cpp~  tempObjCreationIssue.cpp  tempObjCreationIssue.cpp~  vector_move_semantics.cpp  vms.exe.stackdump
code/CPP/stackoverflow/: move-constructor.cpp  move-constructor.cpp~  using-typedef.cpp  using-typedef.cpp~
code/CPP/templates/: #deduction.cpp#  #template3.cpp#  .#deduction.cpp  TemplateDesignPattern.cpp  TemplateDesignPattern.cpp~  curious_recurring_template_pattern.cpp  curious_recurring_template_pattern.cpp~  deduction.cpp  deduction.cpp~  passing-stl-container-as-template-arg.cpp  passing-stl-container-as-template-arg.cpp~  template.cpp  template1.cpp  template3.cpp  template_design_pattern.cpp  template_design_pattern.cpp~  templates.txt
code/CPP/test/: .cproject
code/CPP/teste/: .cproject  .project
code/CPP/tests/: #gmock-test.cpp#  CMakeLists.txt  CMakeLists.txt~  cmake-test.cpp~  gmock-test.cpp  (+10 more)
code/functional-programming/: #functional-container-wrapper.cpp#  CMakeLists.txt  CMakeLists.txt~  algo-test.cpp  algo-test.cpp~  extension-methods  extension-methods.cpp  functional-container-wrapper.cpp  functional-container-wrapper.cpp~
(+3604 files in other folders)
